--- a/css/global/color.less
+++ b/css/global/color.less
@@ -1,22 +1,26 @@
-//color
+//dark blue
 @blue-light:#0cf;
 @blue-toolight:#97EAFF;
 @blue-link:#259;
 @blue-dark:#0767c8;
+@zhblue:#698ebf;
+@bluebg:#1472cf;
 
+//light blue
 @blue: #00ccff;     //天蓝
 @bluex: #049abf;    //海青蓝
 @basecolor:#0084ff; //蔚蓝
 @dk-blue: #0064cd;  //深蓝
 @bg-blue: #fafdff;  //浅蓝背景
 @bo-blue: #cceafe;  //边框浅蓝
+
 @pink: #f39;        //粉色
 @pup: #93f;         //紫色
-@yel:#f73;          //暗橙色     
 @green:#008000;		//绿色
 
+@yel:#f73;          //暗橙色 
 @orange-block:#FF9A33;
-@zhblue:#698ebf;
+
 
 
 //tips style 
