--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -34,6 +34,10 @@ body{
 	    width:1180px;
 	   .auto(x);
 	}
+	//逐步上线新页面
+	.ua-responsive .wp{
+		.w(960px);
+	}
 	//平板竖屏&手机版
 	.ua-responsive .screen-m,.ua-responsive .screen-s{
 		.wp{
