--- a/css/ui/button.less
+++ b/css/ui/button.less
@@ -30,7 +30,7 @@ a.pnc{background-position:0 0;}
 
 
 .u-btn-gray{
-    color: #666!important;
+    color: #666;
     text-shadow: 0 1px 0 #fff;
     background: #f1f1f2;
     background: -webkit-linear-gradient(top,#f8f8f9,#e6e6e8);
