--- a/template/default/forum/viewthread.htm
+++ b/template/default/forum/viewthread.htm
@@ -1,6 +1,6 @@
 <!--{template common/header_m}-->
-<!--{subtemplate forum/forum_header_view}-->
-<!--{subtemplate forum/forum_header_custom}-->
+<!--{subtemplate forum/viewthread_header}-->
+<!--{subtemplate forum/custom_header}-->
 
 <div id="ct">
 	<!--{subtemplate forum/viewthread_top}-->
@@ -8,6 +8,6 @@
 	<!--{subtemplate forum/viewthread_bottom}-->
 </div>
 
-<!--{subtemplate forum/forum_footer}-->
-<!--{subtemplate forum/forum_footer_custom}-->
+<!--{subtemplate forum/viewthread_footer}-->
+<!--{subtemplate forum/custom_footer}-->
 <!--{template common/footer}-->
