--- a/template/default/forum/viewthread_node_body.htm
+++ b/template/default/forum/viewthread_node_body.htm
@@ -219,35 +219,52 @@
 
 
 	<!-- 点评 -->
-	<div id="comment_$post[pid]" class="c-fli-cmt cm">
-		<!--{if $_GET['from'] != 'preview' && $_G['setting']['commentnumber'] && !empty($comments[$post[pid]])}-->
-			<h3 class="psth xs1"><span class="icon_ring vm"></span>{lang comments}</h3>
-			<!--{if $totalcomment[$post[pid]]}--><div class="pstl">$totalcomment[$post[pid]]</div><!--{/if}-->
-			<!--{loop $comments[$post[pid]] $comment}-->
-				<div class="pstl xs1 cl">
-					<div class="psta vm">
-						<a href="home.php?mod=space&uid=$comment[authorid]" c="1">$comment[avatar]</a>
-						<!--{if $comment['authorid']}-->
-							<a href="home.php?mod=space&uid=$comment[authorid]" class="xi2 xw1">$comment[author]</a>
-							<!--{else}-->
-							{lang guest}
+	<div class="c-fli-cmt">
+		<h3 class="c-fli-cmt-title">收起回复</h3>
+		<div id="comment_$post[pid]">
+			<!--{if $_GET['from'] != 'preview' && $_G['setting']['commentnumber'] && !empty($comments[$post[pid]])}-->
+				<div class="c-fli-cmt-content">
+					<!--{if $totalcomment[$post[pid]]}--><div class="pstl">$totalcomment[$post[pid]]</div><!--{/if}-->
+					<!--{loop $comments[$post[pid]] $comment}-->
+						<div class="c-fli-cmt-list" id="c-fli-cmt-list">
+							<a class="u-avatar" href="home.php?mod=space&uid=$comment[authorid]" c="1">$comment[avatar]</a>
+							<!--{if $comment['authorid']}-->
+								<a class="u-username" href="home.php?mod=space&uid=$comment[authorid]">$comment[author]</a>
+								<!--{else}-->
+								<span class="u-username">{lang guest}</span>
+							<!--{/if}-->
+							<span class="u-time">
+								<!--{date($comment[dateline], 'u')}-->
+								<small class="none">
+									<!--{if $comment['useip'] && $_G['group']['allowviewip']}-->
+										IP:$comment[useip]{if $comment[port]}:$comment[port]{/if}
+									<!--{/if}-->
+								</small>
+							</span>
+							<!--{if $_G['forum']['ismoderator'] && $_G['group']['allowdelpost']}-->
+								<a class="u-del" href="javascript:;" onclick="modaction('delcomment', $comment[id])">{lang delete}</a>
+							<!--{/if}-->
+							<span class="u-words">
+								$comment[comment]&nbsp;
+							</span>
+						</div>
+					<!--{/loop}-->
+					<div class="c-fli-cmt-bottom">
+						<!--{if $commentcount[$post[pid]] > $_G['setting']['commentnumber']}-->
+							<div class="w-pages">
+								<div class="pg">
+									<a href="javascript:;" class="nxt" onclick="ajaxget('forum.php?mod=misc&action=commentmore&tid=$post[tid]&pid=$post[pid]&page=2', 'comment_$post[pid]')">{lang next_page}</a>
+								</div>
+							</div>
 						<!--{/if}-->
-					</div>
-					<div class="psti">
-						$comment[comment]&nbsp;
-						<!--{if $comment[rpid]}-->
-							<a href="forum.php?mod=redirect&goto=findpost&pid=$comment[rpid]&ptid=$_G[tid]" class="xi2">{lang detail}</a>
-							<a href="forum.php?mod=post&action=reply&fid=$_G[fid]&tid=$_G[tid]&repquote=$comment[rpid]&extra=$_GET[extra]&page=$page{if $_GET[from]}&from=$_GET[from]{/if}" class="xi2" onclick="showWindow('reply', this.href)">{lang reply}</a>
-						<!--{/if}-->
-						<span class="xg1">
-							{lang poston} <!--{date($comment[dateline], 'u')}-->
-							<!--{if $comment['useip'] && $_G['group']['allowviewip']}-->&nbsp;IP:$comment[useip]{if $comment[port]}:$comment[port]{/if}<!--{/if}-->
-							<!--{if $_G['forum']['ismoderator'] && $_G['group']['allowdelpost']}-->&nbsp;<a href="javascript:;" onclick="modaction('delcomment', $comment[id])">{lang delete}</a><!--{/if}-->
-						</span>
 					</div>
 				</div>
-			<!--{/loop}-->
-			<!--{if $commentcount[$post[pid]] > $_G['setting']['commentnumber']}--><div class="pgs mbm mtn cl"><div class="pg"><a href="javascript:;" class="nxt" onclick="ajaxget('forum.php?mod=misc&action=commentmore&tid=$post[tid]&pid=$post[pid]&page=2', 'comment_$post[pid]')">{lang next_page}</a></div></div><!--{/if}-->
+			<!--{/if}-->
+		</div>
+		<!--{if $post['invisible'] == 0}-->
+			<!--{if $allowpostreply && $post['allowcomment'] && (!$thread['closed'] || $_G['forum']['ismoderator'])}-->
+				<a class="c-fli-cmt-btn u-mask-tg" href="forum.php?mod=misc&action=comment&tid=$post[tid]&pid=$post[pid]&extra=$_GET[extra]&page=$page{if $_G['forum_thread']['special'] == 127}&special=$specialextra{/if}" onclick="showWindow('comment', this.href, 'get', 0)"><i></i>回复</a>
+			<!--{/if}-->
 		<!--{/if}-->
 	</div>
 
