管理操作适配、修订、部分迁移

--- a/css/forum/c-fli-cmt.less
+++ b/css/forum/c-fli-cmt.less
@@ -59,7 +59,7 @@
 .c-fli-cmt-bottom{
 	.clearfix;
 	min-height:28px;
-	padding:10px;
+	padding:10px 10px 5px 10px;
 	.w-pages{.fl;padding-right:150px;}
 	.c-fli-cmt-btn{.fr;}
 }
