--- a/css/forum/c-fli-fastreply.less
+++ b/css/forum/c-fli-fastreply.less
@@ -65,6 +65,12 @@
 	border-top:1px solid #ddd;
 }
 
+.ua-responsive .screen-s{
+	.viewpage-container{
+		padding-bottom:@c-footer-height;
+	}
+}
+
 //回复弹层
 .ua-responsive .screen-s #fwin_reply{
 	//隐藏引用内容
