--- a/css/forum/c-fli-panel.less
+++ b/css/forum/c-fli-panel.less
@@ -143,18 +143,20 @@
 		.none;
 	}
 }
-.ua-responsive .screen-s .c-fli-li .c-fli-panel{
+
+.ua-responsive .screen-s .c-fli .c-fli-panel{
 	.none;
 
 	.c-fli-panel-left,.c-fli-panel-right{float:none;}
 
 	.u-cancel{.db;}
-	.u-reply,.u-cmt,.u-manage{.none;}
+	.u-reply,.u-cmt{.none;}
+	//.u-manage{.none;}
 
 	.pf;.lb(0,0);.z(40);
 	.full(x);
 	
-	a{
+	a,label{
 		.db;.x;
 		.lh(51px);
 		.color(@blue-link,@blue-link,@blue-link);
