--- a/css/forum/forum.less
+++ b/css/forum/forum.less
@@ -1,4 +1,5 @@
 @import url('reset.less');	
+@import url('layout.less');
 @import url('c-fli.less');
 
 @import url('c-fli-title.less');
@@ -21,3 +22,5 @@
 @import url('c-fli-attachment.less');	
 @import url('c-fli-rate.less');	
 @import url('c-fli-cmt.less');	
+
+
