--- a/css/portal/push.less
+++ b/css/portal/push.less
@@ -1,5 +1,5 @@
 @import url('../public/base.less');		//函数
-@import url('../public/path.less');		//路径
+@import url('../global/var.less');		//路径
 @import url('../global/color.less');	//配色
 
 .wp{
@@ -26,6 +26,7 @@
 	}
 	.news_tsbtn{
 		margin-left:50px;
+		.w(120px);.lh(32px);
 		strong{.db;}
 	}
 }
