--- a/css/widget/w-adminpop.less
+++ b/css/widget/w-adminpop.less
@@ -1,6 +1,12 @@
-.w-adminpop{}
+.w-adminpop{
+	
+}
+
+#mdly{
+	//.pf !important;.rb(200px) !important;
+}
 
 .ua-responsive .screen-s.pg_viewthread #mdly{
-    margin-top: 45px;
+    margin-left: 300px;
     width: 240px !important;
 }
