--- a/template/default/component/c_fli_panel.htm
+++ b/template/default/component/c_fli_panel.htm
@@ -90,6 +90,11 @@
 				</label>
 				<!--{/if}-->
 
+				<!-- 管理 -->
+				<!--{if $post[first]}-->
+					<a class="u-adminbar" id="u-adminbar-tg" href="javascript:;">管理</a>
+				<!--{/if}-->
+
 				<!-- 取消（移动端） -->
 				<a class="u-cancel" href="javascript:;">取消</a>
 
