--- a/css/system/stat.css
+++ b/css/system/stat.css
@@ -1,1 +1,1 @@
-#pt{border-bottom:none}.dt th,.dt td{background-color:#fafafa}
+#pt{border-bottom:none}.dt th,.dt td{background-color:#fafafa}html .pg_stat .wp{width:1180px}
