--- a/css/tobe/discuz/discuz-route.less
+++ b/css/tobe/discuz/discuz-route.less
@@ -10,7 +10,7 @@
 		#pt();
 	}
 }*/
-.pg_spacecp,.pg_index,.pg_space,.pg_task,.pg_faq,.pg_guide,.pg_follow,.pg_medal,.pg_magic,.pg_invite,.pg_comment,.user-container,
+.pg_index,.pg_space,.pg_task,.pg_guide,.pg_follow,.pg_medal,.pg_magic,.pg_invite,.pg_comment,.user-container,
 .pg_luckypost
 {
 	#pt{
