--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -124,8 +124,8 @@
 				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
 			</ul>
 			<ul>
-				<li><a href="./misc.php?mod=stat">站点统计<span>(PC版)</span></a></li>
-				<li><a href="./archiver">Archiver<span>(PC版)</span></a></li>
+				<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<span>(PC版)</span></a></li>
+				<li><a href="./archiver"  target="_blank">Archiver<span>(PC版)</span></a></li>
 			</ul>
 		</div>
 
