--- a/css/forum/c-fli-panel.less
+++ b/css/forum/c-fli-panel.less
@@ -28,6 +28,7 @@
 	a{
 		background: none;
 		margin-right:5px;
+		.fl;
 	}
 
 	i{.dbi;.y;background:url('@{url}header/icons2.png') no-repeat 0 0;}
@@ -135,11 +136,11 @@
 
 .ua-responsive .screen-s .c-fli-panel{
 	.tm(1);
-	.u-removerate,.xg1{.none;}
+	.xg1{.none;}
 }
 .ua-responsive .screen-s .c-fli-first .c-fli-panel{
 	.db;
-	.u-reply{
+	.u-reply,.u-report{
 		.none;
 	}
 }
@@ -158,6 +159,7 @@
 	
 	a,label{
 		.db;.x;
+		float:none;
 		.lh(51px);
 		.color(@blue-link,@blue-link,@blue-link);
 		border-bottom:1px solid #eee;
