--- a/css/ui/button.less
+++ b/css/ui/button.less
@@ -26,8 +26,12 @@
 .pnc:active,.pn:active{
     background-position:0 0;
 }
-a.pnc{background-position:0 0;}
-
+a.pnc{
+    background-position:0 0;
+}
+.pn em, .pn span, .pn strong{
+    line-height:inherit;
+}
 
 .u-btn-gray{
     color: #666;
