--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -159,7 +159,7 @@
 	<!--{/if}-->
 <!--{eval output();}-->
 	
-	<script src="http://js.jx3pve.com/js/mod/footer.js"></script>
+	<script src="http://js.jx3pve.com/js/mod/footer.min.js"></script>
 
 </body>
 </html>
