--- a/css/common/c-rate.less
+++ b/css/common/c-rate.less
@@ -82,3 +82,18 @@
 		.w(100%);
 	}
 }
+
+.ua-responsive .screen-s #fwin_rate{
+	font-size:12px;
+	.f_c .list{
+		.w(100%);
+
+		thead tr td:nth-child(3),
+		tbody tr td:nth-child(3){
+			.none;
+		}
+	}
+	.o{
+		.px{.none;}
+	} 
+}
