--- a/css/forum/c-fli-cmt.less
+++ b/css/forum/c-fli-cmt.less
@@ -58,7 +58,7 @@
 }
 .c-fli-cmt-bottom{
 	.clearfix;
-	min-height:28px;
+	min-height:33px;
 	padding:10px 10px 5px 10px;
 	.w-pages{.fl;padding-right:150px;}
 	.c-fli-cmt-btn{.fr;}
@@ -74,9 +74,10 @@
 }
 
 .ua-responsive .screen-s .c-fli-cmt{
-	/*.c-fli-cmt-btn{
+	.c-fli-cmt-btn{
+		//.ps;.fr;margin-top: 10px;
 		.none;
-	}*/
+	}
 }
 
 .ua-responsive .screen-s #fwin_comment{
