开服监控修复

--- a/css/app/app/dialog.less
+++ b/css/app/app/dialog.less
@@ -20,7 +20,7 @@
 			.size(20px);
 			.indent;
 			.pointer;
-			background:url('@{app}servers/cls.gif') no-repeat 0 0;
+			background:url('@{url}app/common/cls.gif') no-repeat 0 0;
 			&:hover{
 				background-position:0 -20px;
 			}
