--- a/css/app/app/sidebar.less
+++ b/css/app/app/sidebar.less
@@ -28,7 +28,7 @@
 }
 .u-app-servers{
 	.size(40px);
-	background:url('@{app}servers/logo_40_noshadow.png') no-repeat 0 0;
+	background:url('@{url}app/servers/logo_40_noshadow.png') no-repeat 0 0;
 }
 
 .app-code{
