--- a/css/app/app_m.less
+++ b/css/app/app_m.less
@@ -1,6 +1,6 @@
-@import url('app/include/var.less');
-@import url('app/include/base.less');
-@import url('app/include/reset.less');
+@import url('global/var.less');
+@import url('public/base.less');
+@import url('public/reset.less');
 
 body{
 	padding-bottom:60px;
